fixing access code on smaller devices

--- a/wp-content/themes/kqed/stylesheet/css-custom/custom.css
+++ b/wp-content/themes/kqed/stylesheet/css-custom/custom.css
@@ -353,5 +353,20 @@ body header .container .nav-menu-wrapper ul.mobile-menu {
     }
 }
 
+@media only screen and (min-width: 1024px) {
+    body .siteintro-wrapper .intro-slider ul li .inner-wrapper .content-wrapper h2 {
+        font-size: 130px;
+        line-height: 129px;
+    }
+
+    body .siteintro-wrapper .intro-slider ul li .inner-wrapper h3 {
+        font-size: 49px;
+        line-height: 66px;
+    }
+    body .siteintro-wrapper .intro-slider ul li .inner-wrapper .content-wrapper form {
+        margin-top: 15px;
+    }
+}
+
 
 
